# 35_FastAPIBasic

./: README  pyproject.toml
