[tool.poetry]
name = "35-fastapibasic"
version = "0.1.0"
description = ""
authors = ["mojoee <47809126+mojoee@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "35_fastapibasic"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
